Started work on rendering movies list

--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -19,6 +19,18 @@ a {
   color:inherit;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 0.5fr minmax(17rem,70%) 0.5fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap:1rem;
+    }
+
+.body-content {
+    grid-column-start: 2;
+}
+
 // Navbar settings
 .navbar {
   display: grid;
