--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,10 @@
 extends layout
 
 block content
+  
 
 block append head
+  script(type='text/javascript', src='js/moment.min.js')
+  script(type='text/javascript', src='js/recycle.js')
   link(rel='stylesheet', href='index-style.css')
+
