Added movie styling. Fixed navbar highlighting

--- a/views/movies.pug
+++ b/views/movies.pug
@@ -7,6 +7,7 @@ block content
 
 block append head
     script(type="text/javascript", src="js/movies.js")
+    link(rel='stylesheet', href='movies-style.css')
             
 
     
