--- a/public/stylesheets/scss/movies-style.scss
+++ b/public/stylesheets/scss/movies-style.scss
@@ -1,21 +1,18 @@
 @import "global-style.scss";
-
-$navbar-color: #3B0BC0;
-$base-color: white;
-$font-color: black;
+$navbar-color: #DF0000;
+$base-color: #171515;
+$font-color: #FFDA4C;
 
 body {
     background-color: $base-color;
-    overflow: hidden;
+    color: $font-color;
 }
 
-
-div.navbar {
-    top: 30%;
-    position:absolute;
+.navbar {
     background-color: $navbar-color;
 }
 
 .navLink {
     background-color: $navbar-color;
 }
+
