--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -24,14 +24,14 @@ a {
     grid-template-rows: 1fr;
     grid-column-gap: 1rem;
     grid-row-gap:1rem;
+    height: 100%;
     }
 
 .body-content { 
     grid-column-start: 2;
     margin: 4rem 0;
+    height: 100%;
 }
-
-
 
 // Navbar settings
 .navbar {
@@ -51,7 +51,7 @@ a {
 
 .navLink {
   padding: 1rem 2rem;
-  border-radius: 1rem;
+  border-radius: 0.6rem;
   font-size: 1.4rem;
 }
 
