--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,9 @@
 extends layout
 
 block content
+  div Days Until Next Recycling Day:
+  div.recycleDays
+
 
 block append head
   script(type='text/javascript', src='js/moment.min.js')
