Reworked recycle note styling

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
-  div Days Until Next Recycling Day:
-  div.recycleDays
+  div.recycleNote
+    div.recycleHead Days Until Next Recycling Day:
+    div.recycleDays
 
 
 block append head
