--- a/public/stylesheets/scss/index-style.scss
+++ b/public/stylesheets/scss/index-style.scss
@@ -21,7 +21,17 @@ div.navbar {
     background-color: $navbar-color;
 }
 
-.recycleDays {
+.recycleNote {
+    width: 100%;
+    text-align: center;
     font-size: 20pt;
+}
+
+.recycleHead {
+    margin-bottom: 1rem;
+}
+
+.recycleDays {
     color: $recycle-color;
+    font-size: 52pt;
 }
