--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -22,7 +22,7 @@ a {
 
 .grid-container {
     display: grid;
-    grid-template-columns: 0.5fr minmax(17rem,70%) 0.5fr;
+    grid-template-columns: 0.5fr minmax(50%,70%) 0.5fr;
     grid-template-rows: 1fr;
     grid-column-gap: 1rem;
     grid-row-gap:1rem;
