--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,7 @@ html
   head
     block head
       title= title
+      meta(name="viewport",content="width=device-width, initial-scale=1")
       meta(property="og:title", content="SmashTheHouse")
       meta(property="og:type", content="website")
       meta(property="og:url", content="http://smashthehouse.website")
