Tweaked movie styling a smidge

--- a/public/stylesheets/scss/movies-style.scss
+++ b/public/stylesheets/scss/movies-style.scss
@@ -10,7 +10,7 @@ body {
 }
 
 .body-content {
-    padding: 2rem;
+    padding: 4rem 6rem;
     background-color: white;
     border-radius: 2rem;
 }
