Fixed navbar on homepage, reset for responsive design

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,9 +2,7 @@ extends layout
 
 block content
   div.recycleNote
-    div.recycleHead Days Until Next Recycling Day:
-    div.recycleDays
-
+  div.home.bar
 
 block append head
   script(type='text/javascript', src='js/moment.min.js')
