--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -1,14 +1,15 @@
 // Base styling (Defaults and resets)
+
 html {
   font-family: "Lucida Grande", Helvetica, Arial, sans-serif; 
   font-size: 1rem;
   cursor: default;
-  height: 35rem;
+  height: 100vh;
   }
 
+
 body {
-  margin: 0rem; //removes annoying space between header and window body
-  height: 100%;
+  //page transition
   animation-name: simple;
   animation-duration: 0.3s;
 }
@@ -18,68 +19,6 @@ a {
   color:inherit;
 }
 
-
-
-.grid-container {
-    display: grid;
-    grid-template-columns: 0.5fr minmax(50%,70%) 0.5fr;
-    grid-template-rows: 1fr;
-    grid-column-gap: 1rem;
-    grid-row-gap:1rem;
-    height: 100%;
-    }
-
-.body-content { 
-    grid-column-start: 2;
-    margin: 4rem 0;
-    height: 100%;
-}
-
-// Navbar settings
-.navbar {
-  display: grid;
-  grid-template-columns: 3rem 0.5fr 0.5fr 3rem; // Set columns for each link in navbar
-  grid-column-gap: 3rem;
-
-  color:white;
-  height: 4rem;
-  width: 100%;
-  padding: 1.3rem 0rem;
-  margin-top: 0rem;
-
-  position: sticky; //Makes navbar stick to top of window (moves along with scrolling)
-  top:0;
-}
-
-.navLink {
-  padding: 1rem 2rem;
-  border-radius: 0.6rem;
-  margin: 1rem 2rem;
-  font-size: 1.4rem;
-}
-
-.navLink:hover{
-  filter: brightness(0.8);
-  transition: 0.2s;
-}
-
-.navLink:not(hover){
-  filter:brightness(1);
-  transition: 0.2s;
-}
-
-// Setup where each link will show up
-.homeLink {
-  grid-column-start: 2;
-  justify-self: center;
-  align-self: center;
-}
-
-.moviesLink {
-  grid-column-start: 3;
-  justify-self: center;
-  align-self: center;
-}
 
 // Page Transitions
 
