--- a/public/stylesheets/scss/index-style.scss
+++ b/public/stylesheets/scss/index-style.scss
@@ -10,28 +10,8 @@ body {
     overflow: hidden;
 }
 
-
-div.navbar {
-    top: 35%;
-    position:absolute;
-    background-color: $navbar-color;
-}
-
-.navLink {
-    background-color: $navbar-color;
-}
-
 .recycleNote {
-    width: 100%;
     text-align: center;
-    font-size: 20pt;
-}
-
-.recycleHead {
-    margin-bottom: 1rem;
-}
-
-.recycleDays {
+    font-size: 2rem;
     color: $recycle-color;
-    font-size: 52pt;
 }
