--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
       meta(property="og:type", content="website")
       meta(property="og:url", content="http://smashthehouse.website")
       meta(property="og:image", content="https://i1.sndcdn.com/avatars-000218739603-yeyinf-t500x500.jpg")
-      link(rel="stylesheet", href="/stylesheets/normalize.css")
+      link(rel="stylesheet", href="normalize.css")
       link(rel="stylesheet", href="global-style.css")
       script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js")
       script(type="text/javascript", src="js/global.js")
