Reworked homebar styling

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,6 +1,6 @@
 block navbar
     div.navbar
-        div.homeLink
-        a.navLink(href="/") Home
-        div.moviesLink
-        a.navLink(href="/movies") Movies
+        div.navLink
+            a(href="/") Home
+        div.navLink
+            a(href="/movies") Movies
