--- a/public/stylesheets/scss/index-style.scss
+++ b/public/stylesheets/scss/index-style.scss
@@ -8,10 +8,41 @@ $recycle-color: green;
 body {
     background-color: $base-color;
     overflow: hidden;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .recycleNote {
     text-align: center;
     font-size: 2rem;
     color: $recycle-color;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+
+.home.bar {
+    background-color: $navbar-color;
+    width: 100%;
+    height: 20%;
+    text-align: center;
+}
+
+
+.navLink {
+  padding: 1rem 2rem;
+  border-radius: 0.6rem;
+  margin: 1rem 2rem;
+  font-size: 1.4rem;
+  display: inline-block;
+  width: 10%;
+}
+
+.navLink:hover{
+  filter: brightness(0.8);
+  transition: 0.2s;
+}
+
+.navLink:not(hover){
+  filter:brightness(1);
+  transition: 0.2s;
 }
