--- a/views/index.pug
+++ b/views/index.pug
@@ -3,11 +3,12 @@ extends layout
 block content
   div.recycleNote
   div.home.bar
+    div.navLink
+      a(href="/") Home
+    div.navLink
+      a(href="/movies") Movies
 
 block append head
   script(type='text/javascript', src='js/moment.min.js')
   script(type='text/javascript', src='js/recycle.js')
   link(rel='stylesheet', href='index-style.css')
-            
-
-    
