--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,5 +13,5 @@ html
       script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js")
       script(type="text/javascript", src="js/global.js")
   body
-    div
-        block content
+    div.container
+      block content
