--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -5,10 +5,16 @@ html {
   font-size: 1rem;
   cursor: default;
   height: 100vh;
+  max-width: 100vw;
   }
 
 
 body {
+  overflow: hidden;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+
   //page transition
   animation-name: simple;
   animation-duration: 0.3s;
