--- a/public/stylesheets/scss/movies-style.scss
+++ b/public/stylesheets/scss/movies-style.scss
@@ -9,10 +9,19 @@ body {
     color: $font-color;
 }
 
-.body-content {
-    padding: 4rem 6rem;
+.gridContainer {
+    display: grid;
+    grid-template-columns: 1fr 30rem 1fr;
+}
+
+.contentContainer {
+
     background-color: white;
     border-radius: 2rem;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    max-width: 100vw;
+
 }
 
 .navbar {
