--- a/views/movies.pug
+++ b/views/movies.pug
@@ -8,9 +8,10 @@ mixin movie(mov)
 block content
     div.gridContainer
         div.contentContainer
-            h1 Movies
-            h2 Available movies:
-            ul.moviesList
+            div.movieContent
+                h1 Movies
+                h2 Available movies:
+                ul.moviesList
 
 block append body
     include navbar.pug
