--- a/public/stylesheets/scss/index-style.scss
+++ b/public/stylesheets/scss/index-style.scss
@@ -19,11 +19,15 @@ body {
 
 .home.bar {
     background-color: $navbar-color;
+    color: $base-color;
     width: 100%;
     height: 20%;
     text-align: center;
 }
 
+.navLink > a {
+  width: 100%;
+}
 
 .navLink {
   padding: 1rem 2rem;
@@ -31,15 +35,20 @@ body {
   margin: 1rem 2rem;
   font-size: 1.4rem;
   display: inline-block;
-  width: 10%;
+  width: 20%;
+  border: 0.1rem solid $navbar-color;
 }
 
 .navLink:hover{
-  filter: brightness(0.8);
+  //filter: brightness(0.8);
+  
+  border: 0.1rem solid white;
   transition: 0.2s;
 }
 
 .navLink:not(hover){
-  filter:brightness(1);
+  //filter:brightness(1);
+  
+  border: 0.1rem solid $navbar-color;
   transition: 0.2s;
 }
