--- a/public/stylesheets/scss/movies-style.scss
+++ b/public/stylesheets/scss/movies-style.scss
@@ -12,6 +12,7 @@ body {
 .gridContainer {
     display: grid;
     grid-template-columns: 1fr 50rem 1fr;
+    grid-template-rows: 3rem 1fr;
 }
 
 .contentContainer {
@@ -20,6 +21,7 @@ body {
     border-radius: 2rem;
     grid-column-start: 2;
     grid-column-end: 3;
+    grid-row-start: 2;
     max-width: 100vw;
 
 }
