Added support for battery status

--- a/public/stylesheets/scss/index-style.scss
+++ b/public/stylesheets/scss/index-style.scss
@@ -66,6 +66,10 @@ table {
   background-color: green;
 }
 
+.noticeTile[title="Battery"] {
+  background-color: black;
+}
+
 .noticeMessage {
   display: none;
 }
