--- a/views/index.pug
+++ b/views/index.pug
@@ -12,9 +12,11 @@ block content
       tr
         td.noticeTile(title="Rob")
         td.noticeTile(title="Recycling")
+        td.noticeTile(title="Battery")
       tr
         td.noticeMessage(title="Rob") Rob is still dead, guys.
         td.noticeMessage(title="Recycling") 
+        td.noticeMessage(title="Battery")
 
 block append head
   script(type='text/javascript', src='js/moment.min.js')
