--- a/views/index.pug
+++ b/views/index.pug
@@ -9,13 +9,14 @@ block content
       a(href="/movies") Movies
   div.noticeTiles
     table
-      tr
+      tr(title="Rob")
         td.noticeTile(title="Rob")
-        td.noticeTile(title="Recycling")
-        td.noticeTile(title="Battery")
-      tr
         td.noticeMessage(title="Rob") Rob is still dead, guys.
-        td.noticeMessage(title="Recycling") 
+      tr(title="Recycling")
+        td.noticeTile(title="Recycling")
+        td.noticeMessage(title="Recycling")
+      tr(title="Battery")
+        td.noticeTile(title="Battery")
         td.noticeMessage(title="Battery")
 
 block append head
