--- a/views/index.pug
+++ b/views/index.pug
@@ -9,15 +9,15 @@ block content
       a(href="/movies") Movies
   div.noticeTiles
     table
-      tr(title="Rob")
-        td.noticeTile(title="Rob")
-        td.noticeMessage(title="Rob") Rob is still dead, guys.
-      tr(title="Recycling")
-        td.noticeTile(title="Recycling")
-        td.noticeMessage(title="Recycling")
       tr(title="Battery")
-        td.noticeTile(title="Battery")
-        td.noticeMessage(title="Battery")
+        td.noticeTile
+        td.noticeMessage
+      tr(title="Recycling")
+        td.noticeTile
+        td.noticeMessage
+      tr(title="Rob")
+        td.noticeTile
+        td.noticeMessage Rob is still dead, guys.
 
 block append head
   script(type='text/javascript', src='js/moment.min.js')
