Reworked layout. Added footer + styling

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,3 +16,5 @@ html
     block body
     div.container
       block content
+    footer.footer
+      a(title="github" href="https://github.com/zacharysang/SmashTheHouse") Github
