--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -20,6 +20,15 @@ body {
   animation-duration: 0.3s;
 }
 
+.footer {
+  position: fixed;
+  bottom: 0px;
+  padding: 2rem;
+  background-color: grey;
+  width: 100%;
+  text-align: center;
+}
+
 a {
   text-decoration: none;
   color:inherit;
