Added days to rob message

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,4 +23,7 @@ block append head
   script(type='text/javascript', src='js/moment.min.js')
   script(type='text/javascript', src='js/index.js')
   script(type='text/javascript', src='js/recycle.js')
+  script(type='text/javascript', src='js/battery.js')
+  script(type='text/javascript', src='js/rob.js')
+
   link(rel='stylesheet', href='index-style.css')
