--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -24,7 +24,8 @@ body {
   position: fixed;
   bottom: 0px;
   padding: 2rem;
-  background-color: grey;
+  background-color: black;
+  color: white;
   width: 100%;
   text-align: center;
 }
