--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,10 +10,11 @@ html
       meta(property="og:image", content="https://i1.sndcdn.com/avatars-000218739603-yeyinf-t500x500.jpg")
       link(rel="stylesheet", href="normalize.css")
       link(rel="stylesheet", href="global-style.css")
+      link(rel="stylesheet", href="nav-style.css")
       script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js")
       script(type="text/javascript", src="js/global.js")
   body
-    block body
+    include navbar.pug
     div.container
       block content
     footer.footer
