--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -4,3 +4,5 @@ block navbar
             a(href="/") Home
         div.navLink
             a(href="/movies") Movies
+        div.navLink
+            a(href="/timeline") Timeline (App)
