--- a/views/timeline.pug
+++ b/views/timeline.pug
@@ -14,5 +14,5 @@ block content
                 ul.moviesList
 
 block append head
-    script(type="text/javascript", src="js/movies.js")
-    link(rel='stylesheet', href='movies-style.css')
+    script(type="text/javascript", src="js/timeline.js")
+    link(rel='stylesheet', href='timeline-style.css')
