Fixed footer loading display. Added timeline styling

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,5 +17,5 @@ html
     include navbar.pug
     div.container
       block content
-    footer.footer
+    footer.footer.hidden
       a(title="github" href="https://github.com/zacharysang/SmashTheHouse") Github
