--- a/public/stylesheets/scss/movies-style.scss
+++ b/public/stylesheets/scss/movies-style.scss
@@ -1,7 +1,7 @@
 @import "global-style.scss";
 
 $navbar-color: #DF0000;
-$base-color: #171515;
+$base-color: #171515; //color of the main background
 $font-color: black;
 
 body {
