--- a/public/stylesheets/scss/timeline-style.scss
+++ b/public/stylesheets/scss/timeline-style.scss
@@ -1,1 +1,11 @@
 $navbar-color: #32795C;
+$base-color: white;
+$font-color: black;
+
+body {
+    background-color: $base-color;
+}
+
+.navbar {
+    background-color: $navbar-color;
+}
