--- a/public/stylesheets/scss/nav-style.scss
+++ b/public/stylesheets/scss/nav-style.scss
@@ -1,5 +1,8 @@
 // Navbar settings
 .navbar {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     width: 100%;
     height: 20%;
     text-align: center;
@@ -8,13 +11,12 @@
 
 
 .navLink {
-  padding: 1rem 1rem;
+  padding: 0.8rem 2.5rem;
+  margin: 1rem 1rem;
   border-radius: 0.6rem;
   border: 0.15rem solid white;
-  margin: 0.5rem 0.5rem;
   font-size: 1.4rem;
   display: inline-block;
-  width: 20%;
 }
 
 .navLink:hover{
