--- a/public/stylesheets/scss/timeline-style.scss
+++ b/public/stylesheets/scss/timeline-style.scss
@@ -9,3 +9,10 @@ body {
 .navbar {
     background-color: $navbar-color;
 }
+
+.workingarea {
+    width: 100%;
+    height: 80%;
+    border: 0.1rem solid red;
+    padding: 1rem;
+}
