added buzz tile

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,6 +12,9 @@ block content
       tr(title="Rob")
         td.noticeTile
         td.noticeMessage Rob is still dead, guys.
+      tr(title="Buzz")
+        td.noticeTile
+        td.noticeMessage Bzzzt!
 
 block append head
   script(type='text/javascript', src='js/moment.min.js')
