Renamed battery functions. Added buzzing tile

--- a/public/stylesheets/scss/index-style.scss
+++ b/public/stylesheets/scss/index-style.scss
@@ -39,7 +39,18 @@ body {
   background-color: black;
 }
 
+[title="Buzz"] > .noticeTile {
+  background-color: #5E5B5B;
+}
+
 .noticeMessage {
   display: none;
 }
 
+@keyframes whiteflash {
+
+  20% {
+    background-color: white;
+  }
+
+}
