--- a/views/index.pug
+++ b/views/index.pug
@@ -21,6 +21,7 @@ block append head
   script(type='text/javascript', src='js/recycle.js')
   script(type='text/javascript', src='js/battery.js')
   script(type='text/javascript', src='js/rob.js')
+  script(type='text/javascript', src='js/buzz.js')
   script(type='text/javascript', src='js/index.js')
 
   link(rel='stylesheet', href='index-style.css')
