Added incompatibility class to index

--- a/public/stylesheets/scss/index-style.scss
+++ b/public/stylesheets/scss/index-style.scss
@@ -47,10 +47,6 @@ body {
   display: none;
 }
 
-@keyframes whiteflash {
-
-  20% {
-    background-color: white;
-  }
-
+.incompatible {
+  display: none;
 }
