Added games page

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -6,3 +6,5 @@ block navbar
             a(href="/movies") Movies
         div.navLink
             a(href="/timeline") Timeline (App)
+        div.navLink
+            a(href="/games") Games
