Added reset button to timeline app

--- a/public/stylesheets/scss/timeline-style.scss
+++ b/public/stylesheets/scss/timeline-style.scss
@@ -18,6 +18,10 @@ body {
     justify-content: center;
 }
 
+.reset {
+    text-align: center;
+    }
+
 
 .guideBox {
     border: 1pt dashed black;
