--- a/views/timeline.pug
+++ b/views/timeline.pug
@@ -8,7 +8,7 @@ mixin guideBox(count)
 block content
     div.workingArea
         +guideBox(30)
-
+    input(type="button" value="Reset" class="reset" onclick="resetFill()")
         
 
 block append head
