Added most clicks game. Changed games nav color

--- a/views/games.pug
+++ b/views/games.pug
@@ -9,8 +9,15 @@ block content
             td.person Sam
             td.person Tony
             td.person Zak
-        tr.euchre
+        tr.game.euchre
             td.gameName Euchre
+            td.score
+            td.score
+            td.score
+            td.score
+            td.score
+        tr.game.mostClicks
+            td.gameName Most Clicks
             td.score
             td.score
             td.score
