--- a/views/games.pug
+++ b/views/games.pug
@@ -11,18 +11,18 @@ block content
             td.person Zak
         tr.game.euchre
             td.gameName Euchre
-            td.score
-            td.score
-            td.score
-            td.score
-            td.score
+            td.score.derek
+            td.score.paxton
+            td.score.sam
+            td.score.tony
+            td.score.zak
         tr.game.mostClicks
             td.gameName Most Clicks
-            td.score
-            td.score
-            td.score
-            td.score
-            td.score
+            td.score.derek
+            td.score.paxton
+            td.score.sam
+            td.score.tony
+            td.score.zak
 
 
         
