--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,19 @@ block content
       tr(title="Buzz")
         td.noticeTile
         td.noticeMessage Bzzzt!
+  <svg viewbox="0 0 400 400" width="600px" class="house">
+  <!--g y="400">
+    <circle fill="#F4F4F9" cx="150" cy="15" r="30" />
+    <circle fill="#B8DBD9" cx="140" cy="60" r="20" />
+    <circle fill="#a1a1a1" cx="120" cy="80" r="10" />
+    <rect fill="#8C5E58" width="20" height="50" x="110" y="90" />
+    <polygon fill="#6B6570" points="100,100 150,150 50,150" />
+    <rect fill="#8C5E58" width="80" height="50" x="60" y="150" />
+    <rect fill="#0D1F22" width="20" height="30" x="100" y="170" />
+  </g--!>
+  
+  <rect fill="green" width="600" height="20" x="-200" y="380"/>
+  </svg>
 
 block append head
   script(type='text/javascript', src='js/moment.min.js')
