--- a/public/stylesheets/scss/global-style.scss
+++ b/public/stylesheets/scss/global-style.scss
@@ -6,8 +6,7 @@ html {
   cursor: default;
   height: 100vh;
   max-width: 100vw;
-  }
-
+}
 
 body {
   //overflow: hidden;
@@ -19,17 +18,19 @@ body {
   animation-duration: 0.3s;
 }
 
+a {
+  text-decoration: none;
+  color:inherit;
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+}
+
 .container {
   height: 60%;
+  display: grid;
+  grid-template-columns: 5fr 1fr 60rem 1fr 5fr; 
 }
-
-
-
-
-.hidden {
-  display: none;
-}
-
 
 .footer {
   position: fixed;
@@ -41,12 +42,12 @@ body {
   text-align: center;
 }
 
-a {
-  text-decoration: none;
-  color:inherit;
-  width: 100%;
-  height: 100%;
-  display: inline-block;
+.incompatible {
+  display: none;
+}
+
+.hidden {
+  display: none;
 }
 
 
