--- a/public/stylesheets/scss/scratch-style.scss
+++ b/public/stylesheets/scss/scratch-style.scss
@@ -16,20 +16,25 @@ $font-color: black;
 
 .bar#A {
     background-color: blue;
+    height: 50px;
 }
 
 .bar#B {
     background-color: red;
+    height: 100px;
 }
 
 .bar#C {
     background-color: purple;
+    height: 150px;
 }
 
 .bar#D {
     background-color: yellow;
+    height: 80px;
 }
 
 .bar#E {
     background-color: green;
+    height: 120px;
 }
