--- a/views/scratch.pug
+++ b/views/scratch.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
     div.container
+        div.bar DO NOT MOVE
         div.bar#A
         div.bar#B
         div.bar#C
